--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/cinema?serverTimezone=Europe/Rome
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:/db/changelog.xml
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.root=DEBUG
 
